perf: 删除无用代码 && 优化log和加载流程